--- a/src/apps/api/v1/package.json
+++ b/src/apps/api/v1/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "apollo-server": "^3.1.2",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "mongodb": "^4.1.1"
   }
 }
