Updated the UI to have various components for the UI look

--- a/src/apps/api/v2/tsconfig.json
+++ b/src/apps/api/v2/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "compilerOptions": {
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "target": "es6",
+    "module": "commonjs",
+    "lib": ["esnext"],
+    "strict": true,
+    "sourceMap": true,
+    "esModuleInterop": true
   }
 }
