--- a/src/apps/api/v2/package.json
+++ b/src/apps/api/v2/package.json
@@ -13,15 +13,20 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.4",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1"
   },
   "dependencies": {
-    "apollo-server": "^3.3.0",
+    "@graphql-tools/schema": "^8.1.2",
+    "apollo-server-core": "^3.3.0",
+    "apollo-server-express": "^3.3.0",
     "class-validator": "^0.13.1",
+    "express": "^4.17.1",
     "graphql": "^15.5.1",
     "mongodb": "^4.1.1",
     "reflect-metadata": "^0.1.13",
+    "subscriptions-transport-ws": "^0.9.19",
     "type-graphql": "^1.1.1",
     "uuid": "^8.3.2"
   }
