--- a/src/apps/ui/v2/package.json
+++ b/src/apps/ui/v2/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.8",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "graphql": "^15.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-modal": "^3.14.3",
+    "react-router-modal": "^2.0.0-rc3",
+    "react-scripts": "^4.0.3",
     "subscriptions-transport-ws": "^0.9.19",
     "web-vitals": "^1.0.1"
   },
