--- a/src/apps/ui/v2/package.json
+++ b/src/apps/ui/v2/package.json
@@ -15,6 +15,7 @@
     "react-router-modal": "^2.0.0-rc3",
     "react-scripts": "^4.0.3",
     "subscriptions-transport-ws": "^0.9.19",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
