--- a/src/apps/api/v2/package.json
+++ b/src/apps/api/v2/package.json
@@ -24,6 +24,7 @@
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.1",
     "reflect-metadata": "^0.1.13",
     "subscriptions-transport-ws": "^0.9.19",
