--- a/src/apps/api/v2/package.json
+++ b/src/apps/api/v2/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.4",
     "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
