--- a/src/apps/api/v2/package.json
+++ b/src/apps/api/v2/package.json
@@ -23,6 +23,7 @@
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
     "class-validator": "^0.13.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
